i18n, photo link fixed, posts feed disabled

--- a/_config.yml
+++ b/_config.yml
@@ -56,13 +56,13 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
+#  - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
 author:
   name   : "Павел Чурзин"
-  avatar : "/assets/images/bio-photo.png"
+  avatar : "/assets/images/bio-photo.jpg"
   bio    : ""
   links:
     - label: "Сайт"
