--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 # twitter_username: username
 github_username: pchurzin
-minimal_mistakes_skin: default
+minimal_mistakes_skin: air
 search: false
 
 locale: "ru-Ru"
@@ -65,6 +65,12 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : ""
   links:
+    - label: "8-995-501-85-81"
+      icon: "fas fa-fw fa-mobile-alt"
+      url: "tel:+79955018581"
+    - label : "pchurzin@yandex.ru"
+      icon: "fas fa-fw fa-at"
+      url: "mailto:pchurzin@yandex.ru"
     - label: "Сайт"
       icon: "fas fa-fw fa-link"
       url: "https://pchurzin.ru"
