--- a/_config.yml
+++ b/_config.yml
@@ -89,6 +89,9 @@ footer:
 #    - label: "Twitter"
 #      icon: "fab fa-fw fa-twitter-square"
 #      url: "https://twitter.com/"
+    - label: "Habr"
+      icon: "fab fa-fw fa-terminal"
+      url: "https://habr.com/users/pchurzin"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/pchurzin"
