--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: pchurzin.ru
 email: pchurzin@yandex.ru
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  pchurzin.ru
 # twitter_username: username
 github_username: pchurzin
 minimal_mistakes_skin: air
@@ -65,9 +63,6 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : ""
   links:
-    - label: "8-995-501-85-81"
-      icon: "fas fa-fw fa-mobile-alt"
-      url: "tel:+79955018581"
     - label : "pchurzin@yandex.ru"
       icon: "fas fa-fw fa-at"
       url: "mailto:pchurzin@yandex.ru"
